--- a/client/wikipage.html
+++ b/client/wikipage.html
@@ -9,8 +9,8 @@
 			</ul>
 			<div class="tab-content">
 				<div class="dropdown visible-xs pull-right">
-					<button aria-expanded="false" class="btn btn-link dropdown-toggle" data-toggle="dropdown" type="button">
-                        <span class="fa fa-ellipsis-v"></span>
+					<button aria-expanded="false" class="btn btn-default dropdown-toggle" data-toggle="dropdown" type="button">
+                        <span class="caret"></span>
                     </button>
 					<ul class="dropdown-menu dropdown-menu-right wikipage-nav" role="menu">
 						<li role="presentation" class="active"><a href="#" aria-controls="article">Artikel</a></li>
