--- a/client/admin.html
+++ b/client/admin.html
@@ -50,7 +50,7 @@
                             <label class="col-sm-2 control-label">Zuordnung der Wikiseiten</label>
                             <div class="dropdown col-sm-2 wiki-association">
                                 <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="true">
-                                    Start: {{wikiPageName settings.wikiStart}}
+                                    <small>Start:</small><br /> {{wikiPageName settings.wikiStart}}
                                     <span class="fa fa-caret-down"></span>
                                 </button>
                                 <ul class="dropdown-menu" role="menu">
@@ -63,7 +63,7 @@
                             </div>
                             <div class="dropdown col-sm-2 wiki-association">
                                 <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="true">
-                                    <small>Trainings:</small> {{wikiPageName settings.wikiPractice}}
+                                    <small>Trainings:</small><br /> {{wikiPageName settings.wikiPractice}}
                                     <span class="fa fa-caret-down"></span>
                                 </button>
                                 <ul class="dropdown-menu" role="menu">
@@ -76,13 +76,26 @@
                             </div>
                             <div class="dropdown col-sm-2 wiki-association">
                                 <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="true">
-                                    Impressum: {{wikiPageName settings.wikiImpressum}}
+                                    <small>Impressum:</small><br /> {{wikiPageName settings.wikiImpressum}}
                                     <span class="fa fa-caret-down"></span>
                                 </button>
                                 <ul class="dropdown-menu" role="menu">
                                     {{#each wikiPages}}
                                     <li role="presentation">
                                         <a href="#" role="menuitem" data-name="wikiImpressum" data-id="{{_id}}">{{name}}</a>
+                                    </li>
+                                    {{/each}}
+                                </ul>
+                            </div>
+                            <div class="dropdown col-sm-2 wiki-association">
+                                <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="true">
+                                    <small>Hilfe:</small><br /> {{wikiPageName settings.wikiHelp}}
+                                    <span class="fa fa-caret-down"></span>
+                                </button>
+                                <ul class="dropdown-menu" role="menu">
+                                    {{#each wikiPages}}
+                                    <li role="presentation">
+                                        <a href="#" role="menuitem" data-name="wikiHelp" data-id="{{_id}}">{{name}}</a>
                                     </li>
                                     {{/each}}
                                 </ul>
@@ -270,38 +283,19 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-xs-12 col-md-10 col-md-offset-1">
+        <div class="col-xs-10 col-xs-offset-1 col-md-4 col-md-offset-4">
             <div class="panel panel-default">
                 <div class="panel-heading all-settings-header pointer">
-                    <button class="btn btn-default pull-right action-add-setting">
-                        <span class="fa fa-plus"></span>
-                    </button>
-                    <h3>Alte Konfiguration</h3>
+                    <h3>Status der Datenbank</h3>
                 </div>
-                {{#if viewAll}}
-                <div class="panel-body">
-                    <form class="form-horizontal">
-                        {{#each settingsForm}}
-                        <div class="form-group">
-                            <label for="{{label}}" class="col-xs-4 col-sm-2 control-label">{{label}}</label>
-                            <div class="col-xs-8 col-sm-10">
-                                <input type="text" class="form-control input-sm" name="{{label}}" value="{{value}}"/>
-                            </div>
+                <div class="list-group">
+                    {{#each collectionStatus}}
+                        <div class="list-group-item">
+                            <label>{{this.name}}:</label> {{this.count}}
                         </div>
-                        {{/each}}
-                    </form>
+                    {{/each}}
                 </div>
-                {{/if}}
             </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-xs-10 col-xs-offset-1 col-md-4 col-md-offset-4">
-            Collection Status:<br/>
-            {{#each collectionStatus}}
-                {{this.name}}: {{this.count}}<br />
-            {{/each}}
-            <button class="btn btn-danger btn-recreate-collections">Datenbank neu erstellen</button>
         </div>
     </div>
 </div>
