--- a/client/ultisite.html
+++ b/client/ultisite.html
@@ -74,3 +74,7 @@
 		<div class="content-overlay"></div>
 	</div>
 </template>
+
+<template name="help">
+	{{>wikipage pageName=settings.wikiHelp}}
+</template>
